# MongoDBQueriesManager

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yaml  .travis.yml  AUTHORS  CHANGELOG.md  LICENSE  Pipfile  README.md  code_of_conduct.md  dev-requirements.txt  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  ruff.toml  setup.py  tox.ini
.github/: stale.yml
.github/workflows/: main.yaml  release.yml
examples/: with_pymongo.py
mongo_queries_manager/: __init__.py  helpers.py  mongodb_queries_manager.py
src/: __init__.py  mongodb_queries_manager.py
tests/: test_blacklist.py  test_custom_cast.py  test_datetime.py  test_limit.py  test_mongo_queries_manager.py  test_operator.py  test_population.py  test_projection.py  test_range_filters.py  test_skip.py  test_sort.py  test_text_operator.py  test_types.py
