[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[project]
name = "mongo-queries-manager"
version = "1.0.1"
description = "Convert query parameters from API urls to MongoDB queries !"
authors = [{ name = "Theo Dangla", email = "theodangla32@gmail.com" }]
requires-python = ">=3.10,<4"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE", "AUTHORS"]
maintainers = [{ name = "Theo Dangla", email = "theodangla32@gmail.com" }]
keywords = [
    "query",
    "mongodb",
    "motor",
    "api",
    "request",
    "mongo-queries-manager",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Topic :: Database",
    "Topic :: System :: Networking",
    "Development Status :: 5 - Production/Stable",
]

[project.optional-dependencies]
dateparser = ["dateparser>=1.0.0,<2"]

[project.urls]
Homepage = "https://pypi.org/project/mongo-queries-manager/"
Repository = "https://github.com/comic31/MongoDBQueriesManager"
Documentation = "https://github.com/comic31/MongoDBQueriesManager"
Changelog = "https://github.com/comic31/MongoDBQueriesManager/blob/main/CHANGELOG.md"

[dependency-groups]
tests = [
    "pytest",
    "coverage[toml]",
    "pymongo",
    "nox",
]
lint-and-format = [
    "ruff",
]
type = [
    "mypy",
    "types-dateparser",
]
tools = [
    "bump2version",
    "pre-commit",
]

[tool.uv.build-backend]
module-name = ["mongo_queries_manager"]
module-root = ""
source-exclude = [
    "tests/**/*.py",
    "examples/**/*.py",
    "examples/**/*.py",
]
source-include = [
    "CHANGELOG.md",
    "README.md",
]
wheel-exclude = [
    "tests/**/*.py",
    "examples/**/*.py",
    "examples/**/*.py",
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-ra -q"
junit_suite_name = "junit_result.xml"
junit_log_passing_tests = true
junit_logging = "all"
junit_duration_report = "total"
testpaths = [
    "tests"
]


# Converage run configuration
[tool.coverage.run]
branch = true
source = ["mongo_queries_manager/"]


# Black report configuration
[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
ignore_errors = true
omit = [
    "tests/*",
]
